--- a/BaiduBce.Sms.Console/BaiduBce.Sms.Console.csproj
+++ b/BaiduBce.Sms.Console/BaiduBce.Sms.Console.csproj
@@ -12,4 +12,11 @@
       <ProjectReference Include="..\BaiduBce.Sms\BaiduBce.Sms.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    </ItemGroup>
+
 </Project>
