--- a/BaiduBce.Sms/BaiduBce.Sms.csproj
+++ b/BaiduBce.Sms/BaiduBce.Sms.csproj
@@ -3,10 +3,14 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <Nullable>disable</Nullable>
+        <Authors>Spyx</Authors>
+        <Description>a baide cloud bce sms client</Description>
+        <RepositoryUrl>https://github.com/myspyx/BaiduBce.Sdk</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
         <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
         <PackageReference Include="System.Text.Json" Version="6.0.5" />
     </ItemGroup>
